// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stylus converter Converts to flat variables with prefix 1`] = `
"
$tw-screens-sm = 640px;
$tw-screens-md = 768px;
$tw-screens-lg = 1024px;
$tw-screens-xl = 1280px;

$tw-fontFamily-display = (Gilroy,sans-serif);
$tw-fontFamily-body = (Graphik,sans-serif);

$tw-borderWidth-0 = 0;
$tw-borderWidth-2 = 2px;
$tw-borderWidth-4 = 4px;
$tw-borderWidth-default = 1px;

$tw-colors-transparent = transparent;
$tw-colors-current = currentColor;
$tw-colors-black = #000;
$tw-colors-white = #fff;
$tw-colors-gray-100 = #f7fafc;
$tw-colors-gray-200 = #edf2f7;
$tw-colors-gray-300 = #e2e8f0;
$tw-colors-gray-400 = #cbd5e0;
$tw-colors-gray-500 = #a0aec0;
$tw-colors-gray-600 = #718096;
$tw-colors-gray-700 = #4a5568;
$tw-colors-gray-800 = #2d3748;
$tw-colors-gray-900 = #1a202c;
$tw-colors-red-100 = #fff5f5;
$tw-colors-red-200 = #fed7d7;
$tw-colors-red-300 = #feb2b2;
$tw-colors-red-400 = #fc8181;
$tw-colors-red-500 = #f56565;
$tw-colors-red-600 = #e53e3e;
$tw-colors-red-700 = #c53030;
$tw-colors-red-800 = #9b2c2c;
$tw-colors-red-900 = #742a2a;
$tw-colors-orange-100 = #fffaf0;
$tw-colors-orange-200 = #feebc8;
$tw-colors-orange-300 = #fbd38d;
$tw-colors-orange-400 = #f6ad55;
$tw-colors-orange-500 = #ed8936;
$tw-colors-orange-600 = #dd6b20;
$tw-colors-orange-700 = #c05621;
$tw-colors-orange-800 = #9c4221;
$tw-colors-orange-900 = #7b341e;
$tw-colors-yellow-100 = #fffff0;
$tw-colors-yellow-200 = #fefcbf;
$tw-colors-yellow-300 = #faf089;
$tw-colors-yellow-400 = #f6e05e;
$tw-colors-yellow-500 = #ecc94b;
$tw-colors-yellow-600 = #d69e2e;
$tw-colors-yellow-700 = #b7791f;
$tw-colors-yellow-800 = #975a16;
$tw-colors-yellow-900 = #744210;
$tw-colors-green-100 = #f0fff4;
$tw-colors-green-200 = #c6f6d5;
$tw-colors-green-300 = #9ae6b4;
$tw-colors-green-400 = #68d391;
$tw-colors-green-500 = #48bb78;
$tw-colors-green-600 = #38a169;
$tw-colors-green-700 = #2f855a;
$tw-colors-green-800 = #276749;
$tw-colors-green-900 = #22543d;
$tw-colors-teal-100 = #e6fffa;
$tw-colors-teal-200 = #b2f5ea;
$tw-colors-teal-300 = #81e6d9;
$tw-colors-teal-400 = #4fd1c5;
$tw-colors-teal-500 = #38b2ac;
$tw-colors-teal-600 = #319795;
$tw-colors-teal-700 = #2c7a7b;
$tw-colors-teal-800 = #285e61;
$tw-colors-teal-900 = #234e52;
$tw-colors-blue-100 = #ebf8ff;
$tw-colors-blue-200 = #bee3f8;
$tw-colors-blue-300 = #90cdf4;
$tw-colors-blue-400 = #63b3ed;
$tw-colors-blue-500 = #4299e1;
$tw-colors-blue-600 = #3182ce;
$tw-colors-blue-700 = #2b6cb0;
$tw-colors-blue-800 = #2c5282;
$tw-colors-blue-900 = #2a4365;
$tw-colors-indigo-100 = #ebf4ff;
$tw-colors-indigo-200 = #c3dafe;
$tw-colors-indigo-300 = #a3bffa;
$tw-colors-indigo-400 = #7f9cf5;
$tw-colors-indigo-500 = #667eea;
$tw-colors-indigo-600 = #5a67d8;
$tw-colors-indigo-700 = #4c51bf;
$tw-colors-indigo-800 = #434190;
$tw-colors-indigo-900 = #3c366b;
$tw-colors-purple-100 = #faf5ff;
$tw-colors-purple-200 = #e9d8fd;
$tw-colors-purple-300 = #d6bcfa;
$tw-colors-purple-400 = #b794f4;
$tw-colors-purple-500 = #9f7aea;
$tw-colors-purple-600 = #805ad5;
$tw-colors-purple-700 = #6b46c1;
$tw-colors-purple-800 = #553c9a;
$tw-colors-purple-900 = #44337a;
$tw-colors-pink-100 = #fff5f7;
$tw-colors-pink-200 = #fed7e2;
$tw-colors-pink-300 = #fbb6ce;
$tw-colors-pink-400 = #f687b3;
$tw-colors-pink-500 = #ed64a6;
$tw-colors-pink-600 = #d53f8c;
$tw-colors-pink-700 = #b83280;
$tw-colors-pink-800 = #97266d;
$tw-colors-pink-900 = #702459;
$tw-colors-cyan = #9cdbff;

$tw-spacing-0 = 0;
$tw-spacing-1 = 0.25rem;
$tw-spacing-2 = 0.5rem;
$tw-spacing-3 = 0.75rem;
$tw-spacing-4 = 1rem;
$tw-spacing-5 = 1.25rem;
$tw-spacing-6 = 1.5rem;
$tw-spacing-8 = 2rem;
$tw-spacing-10 = 2.5rem;
$tw-spacing-12 = 3rem;
$tw-spacing-16 = 4rem;
$tw-spacing-20 = 5rem;
$tw-spacing-24 = 6rem;
$tw-spacing-32 = 8rem;
$tw-spacing-40 = 10rem;
$tw-spacing-48 = 12rem;
$tw-spacing-56 = 14rem;
$tw-spacing-64 = 16rem;
$tw-spacing-96 = 24rem;
$tw-spacing-128 = 32rem;
$tw-spacing-px = 1px;
"
`;

exports[`Stylus converter Converts to nested map and wraps keys in quotes 1`] = `
"
$screens = {
  \\"sm\\": 640px,
  \\"md\\": 768px,
  \\"lg\\": 1024px,
  \\"xl\\": 1280px,
};

$fontFamily = {
  \\"display\\": (Gilroy,sans-serif),
  \\"body\\": (Graphik,sans-serif),
};

$borderWidth = {
  \\"0\\": 0,
  \\"2\\": 2px,
  \\"4\\": 4px,
  \\"default\\": 1px,
};

$colors = {
  \\"transparent\\": transparent,
  \\"current\\": currentColor,
  \\"black\\": #000,
  \\"white\\": #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  \\"cyan\\": #9cdbff,
};

$spacing = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  \\"px\\": 1px,
};
"
`;

exports[`Stylus converter Converts to nested map with prefix 1`] = `
"
$tw-screens = {
  sm: 640px,
  md: 768px,
  lg: 1024px,
  xl: 1280px,
};

$tw-fontFamily = {
  display: (Gilroy,sans-serif),
  body: (Graphik,sans-serif),
};

$tw-borderWidth = {
  \\"0\\": 0,
  \\"2\\": 2px,
  \\"4\\": 4px,
  default: 1px,
};

$tw-colors = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
};

$tw-spacing = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  px: 1px,
};
"
`;

exports[`Stylus converter full config Converts to flat variables 1`] = `
"
$screens = {
  sm: 640px,
  md: 768px,
  lg: 1024px,
  xl: 1280px,
};

$fontFamily = {
  display: (Gilroy,sans-serif),
  body: (Graphik,sans-serif),
};

$borderWidth = {
  \\"0\\": 0,
  \\"2\\": 2px,
  \\"4\\": 4px,
  default: 1px,
};

$colors = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
};

$spacing = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  px: 1px,
};

$backgroundColor = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
};

$backgroundImage = {
  gradient-to-t: (linear-gradient(to top, var(--gradient-color-stops))),
  gradient-to-tr: (linear-gradient(to top right, var(--gradient-color-stops))),
  gradient-to-r: (linear-gradient(to right, var(--gradient-color-stops))),
  gradient-to-br: (linear-gradient(to bottom right, var(--gradient-color-stops))),
  gradient-to-b: (linear-gradient(to bottom, var(--gradient-color-stops))),
  gradient-to-bl: (linear-gradient(to bottom left, var(--gradient-color-stops))),
  gradient-to-l: (linear-gradient(to left, var(--gradient-color-stops))),
  gradient-to-tl: (linear-gradient(to top left, var(--gradient-color-stops))),
};

$gradientColorStops = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
};

$backgroundOpacity = {
  \\"0\\": 0,
  \\"25\\": 0.25,
  \\"50\\": 0.5,
  \\"75\\": 0.75,
  \\"100\\": 1,
};

$backgroundPosition = {
  bottom: bottom,
  center: center,
  left: left,
  left-bottom: left bottom,
  left-top: left top,
  right: right,
  right-bottom: right bottom,
  right-top: right top,
  top: top,
};

$backgroundSize = {
  auto: auto,
  cover: cover,
  contain: contain,
};

$borderColor = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
  default: #e2e8f0,
};

$borderOpacity = {
  \\"0\\": 0,
  \\"25\\": 0.25,
  \\"50\\": 0.5,
  \\"75\\": 0.75,
  \\"100\\": 1,
};

$borderRadius = {
  none: 0,
  sm: 0.125rem,
  default: 0.25rem,
  md: 0.375rem,
  lg: 0.5rem,
  full: 9999px,
};

$boxShadow = {
  xs: (0 0 0 1px rgba(0, 0, 0, 0.05)),
  sm: (0 1px 2px 0 rgba(0, 0, 0, 0.05)),
  default: (0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)),
  md: (0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06)),
  lg: (0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)),
  xl: (0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04)),
  \\"2xl\\": (0 25px 50px -12px rgba(0, 0, 0, 0.25)),
  inner: (inset 0 2px 4px 0 rgba(0, 0, 0, 0.06)),
  outline: (0 0 0 3px rgba(66, 153, 225, 0.5)),
  none: none,
};

$container = {
};

$cursor = {
  auto: auto,
  default: default,
  pointer: pointer,
  wait: wait,
  text: text,
  move: move,
  not-allowed: not-allowed,
};

$divideColor = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
  default: #e2e8f0,
};

$divideOpacity = {
  \\"0\\": 0,
  \\"25\\": 0.25,
  \\"50\\": 0.5,
  \\"75\\": 0.75,
  \\"100\\": 1,
};

$divideWidth = {
  \\"0\\": 0,
  \\"2\\": 2px,
  \\"4\\": 4px,
  default: 1px,
};

$fill = {
  current: currentColor,
};

$flex = {
  \\"1\\": 1 1 0%,
  auto: 1 1 auto,
  initial: 0 1 auto,
  none: none,
};

$flexGrow = {
  \\"0\\": 0,
  default: 1,
};

$flexShrink = {
  \\"0\\": 0,
  default: 1,
};

$fontSize = {
  xs: 0.75rem,
  sm: 0.875rem,
  base: 1rem,
  lg: 1.125rem,
  xl: 1.25rem,
  \\"2xl\\": 1.5rem,
  \\"3xl\\": 1.875rem,
  \\"4xl\\": 2.25rem,
  \\"5xl\\": 3rem,
  \\"6xl\\": 4rem,
};

$fontWeight = {
  hairline: 100,
  thin: 200,
  light: 300,
  normal: 400,
  medium: 500,
  semibold: 600,
  bold: 700,
  extrabold: 800,
  black: 900,
};

$height = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  auto: auto,
  px: 1px,
  full: 100%,
  screen: 100vh,
};

$inset = {
  \\"0\\": 0,
  auto: auto,
};

$letterSpacing = {
  tighter: -0.05em,
  tight: -0.025em,
  normal: 0,
  wide: 0.025em,
  wider: 0.05em,
  widest: 0.1em,
};

$lineHeight = {
  \\"3\\": .75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"7\\": 1.75rem,
  \\"8\\": 2rem,
  \\"9\\": 2.25rem,
  \\"10\\": 2.5rem,
  none: 1,
  tight: 1.25,
  snug: 1.375,
  normal: 1.5,
  relaxed: 1.625,
  loose: 2,
};

$listStyleType = {
  none: none,
  disc: disc,
  decimal: decimal,
};

$margin = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  auto: auto,
  px: 1px,
  \\"-1\\": -0.25rem,
  \\"-2\\": -0.5rem,
  \\"-3\\": -0.75rem,
  \\"-4\\": -1rem,
  \\"-5\\": -1.25rem,
  \\"-6\\": -1.5rem,
  \\"-8\\": -2rem,
  \\"-10\\": -2.5rem,
  \\"-12\\": -3rem,
  \\"-16\\": -4rem,
  \\"-20\\": -5rem,
  \\"-24\\": -6rem,
  \\"-32\\": -8rem,
  \\"-40\\": -10rem,
  \\"-48\\": -12rem,
  \\"-56\\": -14rem,
  \\"-64\\": -16rem,
  \\"-96\\": -24rem,
  \\"-128\\": -32rem,
  -px: -1px,
};

$maxHeight = {
  full: 100%,
  screen: 100vh,
};

$maxWidth = {
  none: none,
  xs: 20rem,
  sm: 24rem,
  md: 28rem,
  lg: 32rem,
  xl: 36rem,
  \\"2xl\\": 42rem,
  \\"3xl\\": 48rem,
  \\"4xl\\": 56rem,
  \\"5xl\\": 64rem,
  \\"6xl\\": 72rem,
  full: 100%,
  screen-sm: 640px,
  screen-md: 768px,
  screen-lg: 1024px,
  screen-xl: 1280px,
};

$minHeight = {
  \\"0\\": 0,
  full: 100%,
  screen: 100vh,
};

$minWidth = {
  \\"0\\": 0,
  full: 100%,
};

$objectPosition = {
  bottom: bottom,
  center: center,
  left: left,
  left-bottom: left bottom,
  left-top: left top,
  right: right,
  right-bottom: right bottom,
  right-top: right top,
  top: top,
};

$opacity = {
  \\"0\\": 0,
  \\"25\\": 0.25,
  \\"50\\": 0.5,
  \\"75\\": 0.75,
  \\"100\\": 1,
};

$order = {
  \\"1\\": 1,
  \\"2\\": 2,
  \\"3\\": 3,
  \\"4\\": 4,
  \\"5\\": 5,
  \\"6\\": 6,
  \\"7\\": 7,
  \\"8\\": 8,
  \\"9\\": 9,
  \\"10\\": 10,
  \\"11\\": 11,
  \\"12\\": 12,
  first: -9999,
  last: 9999,
  none: 0,
};

$padding = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  px: 1px,
};

$placeholderColor = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
};

$placeholderOpacity = {
  \\"0\\": 0,
  \\"25\\": 0.25,
  \\"50\\": 0.5,
  \\"75\\": 0.75,
  \\"100\\": 1,
};

$space = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  px: 1px,
  \\"-1\\": -0.25rem,
  \\"-2\\": -0.5rem,
  \\"-3\\": -0.75rem,
  \\"-4\\": -1rem,
  \\"-5\\": -1.25rem,
  \\"-6\\": -1.5rem,
  \\"-8\\": -2rem,
  \\"-10\\": -2.5rem,
  \\"-12\\": -3rem,
  \\"-16\\": -4rem,
  \\"-20\\": -5rem,
  \\"-24\\": -6rem,
  \\"-32\\": -8rem,
  \\"-40\\": -10rem,
  \\"-48\\": -12rem,
  \\"-56\\": -14rem,
  \\"-64\\": -16rem,
  \\"-96\\": -24rem,
  \\"-128\\": -32rem,
  -px: -1px,
};

$stroke = {
  current: currentColor,
};

$strokeWidth = {
  \\"0\\": 0,
  \\"1\\": 1,
  \\"2\\": 2,
};

$textColor = {
  transparent: transparent,
  current: currentColor,
  black: #000,
  white: #fff,
  \\"gray-100\\": #f7fafc,
  \\"gray-200\\": #edf2f7,
  \\"gray-300\\": #e2e8f0,
  \\"gray-400\\": #cbd5e0,
  \\"gray-500\\": #a0aec0,
  \\"gray-600\\": #718096,
  \\"gray-700\\": #4a5568,
  \\"gray-800\\": #2d3748,
  \\"gray-900\\": #1a202c,
  \\"red-100\\": #fff5f5,
  \\"red-200\\": #fed7d7,
  \\"red-300\\": #feb2b2,
  \\"red-400\\": #fc8181,
  \\"red-500\\": #f56565,
  \\"red-600\\": #e53e3e,
  \\"red-700\\": #c53030,
  \\"red-800\\": #9b2c2c,
  \\"red-900\\": #742a2a,
  \\"orange-100\\": #fffaf0,
  \\"orange-200\\": #feebc8,
  \\"orange-300\\": #fbd38d,
  \\"orange-400\\": #f6ad55,
  \\"orange-500\\": #ed8936,
  \\"orange-600\\": #dd6b20,
  \\"orange-700\\": #c05621,
  \\"orange-800\\": #9c4221,
  \\"orange-900\\": #7b341e,
  \\"yellow-100\\": #fffff0,
  \\"yellow-200\\": #fefcbf,
  \\"yellow-300\\": #faf089,
  \\"yellow-400\\": #f6e05e,
  \\"yellow-500\\": #ecc94b,
  \\"yellow-600\\": #d69e2e,
  \\"yellow-700\\": #b7791f,
  \\"yellow-800\\": #975a16,
  \\"yellow-900\\": #744210,
  \\"green-100\\": #f0fff4,
  \\"green-200\\": #c6f6d5,
  \\"green-300\\": #9ae6b4,
  \\"green-400\\": #68d391,
  \\"green-500\\": #48bb78,
  \\"green-600\\": #38a169,
  \\"green-700\\": #2f855a,
  \\"green-800\\": #276749,
  \\"green-900\\": #22543d,
  \\"teal-100\\": #e6fffa,
  \\"teal-200\\": #b2f5ea,
  \\"teal-300\\": #81e6d9,
  \\"teal-400\\": #4fd1c5,
  \\"teal-500\\": #38b2ac,
  \\"teal-600\\": #319795,
  \\"teal-700\\": #2c7a7b,
  \\"teal-800\\": #285e61,
  \\"teal-900\\": #234e52,
  \\"blue-100\\": #ebf8ff,
  \\"blue-200\\": #bee3f8,
  \\"blue-300\\": #90cdf4,
  \\"blue-400\\": #63b3ed,
  \\"blue-500\\": #4299e1,
  \\"blue-600\\": #3182ce,
  \\"blue-700\\": #2b6cb0,
  \\"blue-800\\": #2c5282,
  \\"blue-900\\": #2a4365,
  \\"indigo-100\\": #ebf4ff,
  \\"indigo-200\\": #c3dafe,
  \\"indigo-300\\": #a3bffa,
  \\"indigo-400\\": #7f9cf5,
  \\"indigo-500\\": #667eea,
  \\"indigo-600\\": #5a67d8,
  \\"indigo-700\\": #4c51bf,
  \\"indigo-800\\": #434190,
  \\"indigo-900\\": #3c366b,
  \\"purple-100\\": #faf5ff,
  \\"purple-200\\": #e9d8fd,
  \\"purple-300\\": #d6bcfa,
  \\"purple-400\\": #b794f4,
  \\"purple-500\\": #9f7aea,
  \\"purple-600\\": #805ad5,
  \\"purple-700\\": #6b46c1,
  \\"purple-800\\": #553c9a,
  \\"purple-900\\": #44337a,
  \\"pink-100\\": #fff5f7,
  \\"pink-200\\": #fed7e2,
  \\"pink-300\\": #fbb6ce,
  \\"pink-400\\": #f687b3,
  \\"pink-500\\": #ed64a6,
  \\"pink-600\\": #d53f8c,
  \\"pink-700\\": #b83280,
  \\"pink-800\\": #97266d,
  \\"pink-900\\": #702459,
  cyan: #9cdbff,
};

$textOpacity = {
  \\"0\\": 0,
  \\"25\\": 0.25,
  \\"50\\": 0.5,
  \\"75\\": 0.75,
  \\"100\\": 1,
};

$width = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  auto: auto,
  px: 1px,
  \\"1/2\\": 50%,
  \\"1/3\\": 33.333333%,
  \\"2/3\\": 66.666667%,
  \\"1/4\\": 25%,
  \\"2/4\\": 50%,
  \\"3/4\\": 75%,
  \\"1/5\\": 20%,
  \\"2/5\\": 40%,
  \\"3/5\\": 60%,
  \\"4/5\\": 80%,
  \\"1/6\\": 16.666667%,
  \\"2/6\\": 33.333333%,
  \\"3/6\\": 50%,
  \\"4/6\\": 66.666667%,
  \\"5/6\\": 83.333333%,
  \\"1/12\\": 8.333333%,
  \\"2/12\\": 16.666667%,
  \\"3/12\\": 25%,
  \\"4/12\\": 33.333333%,
  \\"5/12\\": 41.666667%,
  \\"6/12\\": 50%,
  \\"7/12\\": 58.333333%,
  \\"8/12\\": 66.666667%,
  \\"9/12\\": 75%,
  \\"10/12\\": 83.333333%,
  \\"11/12\\": 91.666667%,
  full: 100%,
  screen: 100vw,
};

$zIndex = {
  \\"0\\": 0,
  \\"10\\": 10,
  \\"20\\": 20,
  \\"30\\": 30,
  \\"40\\": 40,
  \\"50\\": 50,
  auto: auto,
};

$gap = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  px: 1px,
};

$gridTemplateColumns = {
  \\"1\\": (repeat(1, minmax(0, 1fr))),
  \\"2\\": (repeat(2, minmax(0, 1fr))),
  \\"3\\": (repeat(3, minmax(0, 1fr))),
  \\"4\\": (repeat(4, minmax(0, 1fr))),
  \\"5\\": (repeat(5, minmax(0, 1fr))),
  \\"6\\": (repeat(6, minmax(0, 1fr))),
  \\"7\\": (repeat(7, minmax(0, 1fr))),
  \\"8\\": (repeat(8, minmax(0, 1fr))),
  \\"9\\": (repeat(9, minmax(0, 1fr))),
  \\"10\\": (repeat(10, minmax(0, 1fr))),
  \\"11\\": (repeat(11, minmax(0, 1fr))),
  \\"12\\": (repeat(12, minmax(0, 1fr))),
  none: none,
};

$gridColumn = {
  auto: auto,
  \\"span-1\\": span 1 / span 1,
  \\"span-2\\": span 2 / span 2,
  \\"span-3\\": span 3 / span 3,
  \\"span-4\\": span 4 / span 4,
  \\"span-5\\": span 5 / span 5,
  \\"span-6\\": span 6 / span 6,
  \\"span-7\\": span 7 / span 7,
  \\"span-8\\": span 8 / span 8,
  \\"span-9\\": span 9 / span 9,
  \\"span-10\\": span 10 / span 10,
  \\"span-11\\": span 11 / span 11,
  \\"span-12\\": span 12 / span 12,
};

$gridColumnStart = {
  \\"1\\": 1,
  \\"2\\": 2,
  \\"3\\": 3,
  \\"4\\": 4,
  \\"5\\": 5,
  \\"6\\": 6,
  \\"7\\": 7,
  \\"8\\": 8,
  \\"9\\": 9,
  \\"10\\": 10,
  \\"11\\": 11,
  \\"12\\": 12,
  \\"13\\": 13,
  auto: auto,
};

$gridColumnEnd = {
  \\"1\\": 1,
  \\"2\\": 2,
  \\"3\\": 3,
  \\"4\\": 4,
  \\"5\\": 5,
  \\"6\\": 6,
  \\"7\\": 7,
  \\"8\\": 8,
  \\"9\\": 9,
  \\"10\\": 10,
  \\"11\\": 11,
  \\"12\\": 12,
  \\"13\\": 13,
  auto: auto,
};

$gridTemplateRows = {
  \\"1\\": (repeat(1, minmax(0, 1fr))),
  \\"2\\": (repeat(2, minmax(0, 1fr))),
  \\"3\\": (repeat(3, minmax(0, 1fr))),
  \\"4\\": (repeat(4, minmax(0, 1fr))),
  \\"5\\": (repeat(5, minmax(0, 1fr))),
  \\"6\\": (repeat(6, minmax(0, 1fr))),
  none: none,
};

$gridRow = {
  auto: auto,
  \\"span-1\\": span 1 / span 1,
  \\"span-2\\": span 2 / span 2,
  \\"span-3\\": span 3 / span 3,
  \\"span-4\\": span 4 / span 4,
  \\"span-5\\": span 5 / span 5,
  \\"span-6\\": span 6 / span 6,
};

$gridRowStart = {
  \\"1\\": 1,
  \\"2\\": 2,
  \\"3\\": 3,
  \\"4\\": 4,
  \\"5\\": 5,
  \\"6\\": 6,
  \\"7\\": 7,
  auto: auto,
};

$gridRowEnd = {
  \\"1\\": 1,
  \\"2\\": 2,
  \\"3\\": 3,
  \\"4\\": 4,
  \\"5\\": 5,
  \\"6\\": 6,
  \\"7\\": 7,
  auto: auto,
};

$transformOrigin = {
  center: center,
  top: top,
  top-right: top right,
  right: right,
  bottom-right: bottom right,
  bottom: bottom,
  bottom-left: bottom left,
  left: left,
  top-left: top left,
};

$scale = {
  \\"0\\": 0,
  \\"50\\": .5,
  \\"75\\": .75,
  \\"90\\": .9,
  \\"95\\": .95,
  \\"100\\": 1,
  \\"105\\": 1.05,
  \\"110\\": 1.1,
  \\"125\\": 1.25,
  \\"150\\": 1.5,
};

$rotate = {
  \\"0\\": 0,
  \\"45\\": 45deg,
  \\"90\\": 90deg,
  \\"180\\": 180deg,
  \\"-180\\": -180deg,
  \\"-90\\": -90deg,
  \\"-45\\": -45deg,
};

$translate = {
  \\"0\\": 0,
  \\"1\\": 0.25rem,
  \\"2\\": 0.5rem,
  \\"3\\": 0.75rem,
  \\"4\\": 1rem,
  \\"5\\": 1.25rem,
  \\"6\\": 1.5rem,
  \\"8\\": 2rem,
  \\"10\\": 2.5rem,
  \\"12\\": 3rem,
  \\"16\\": 4rem,
  \\"20\\": 5rem,
  \\"24\\": 6rem,
  \\"32\\": 8rem,
  \\"40\\": 10rem,
  \\"48\\": 12rem,
  \\"56\\": 14rem,
  \\"64\\": 16rem,
  \\"96\\": 24rem,
  \\"128\\": 32rem,
  px: 1px,
  \\"-1\\": -0.25rem,
  \\"-2\\": -0.5rem,
  \\"-3\\": -0.75rem,
  \\"-4\\": -1rem,
  \\"-5\\": -1.25rem,
  \\"-6\\": -1.5rem,
  \\"-8\\": -2rem,
  \\"-10\\": -2.5rem,
  \\"-12\\": -3rem,
  \\"-16\\": -4rem,
  \\"-20\\": -5rem,
  \\"-24\\": -6rem,
  \\"-32\\": -8rem,
  \\"-40\\": -10rem,
  \\"-48\\": -12rem,
  \\"-56\\": -14rem,
  \\"-64\\": -16rem,
  \\"-96\\": -24rem,
  \\"-128\\": -32rem,
  -px: -1px,
  -full: -100%,
  \\"-1/2\\": -50%,
  \\"1/2\\": 50%,
  full: 100%,
};

$skew = {
  \\"0\\": 0,
  \\"3\\": 3deg,
  \\"6\\": 6deg,
  \\"12\\": 12deg,
  \\"-12\\": -12deg,
  \\"-6\\": -6deg,
  \\"-3\\": -3deg,
};

$transitionProperty = {
  none: none,
  all: all,
  default: (background-color, border-color, color, fill, stroke, opacity, box-shadow, transform),
  colors: (background-color, border-color, color, fill, stroke),
  opacity: opacity,
  shadow: box-shadow,
  transform: transform,
};

$transitionTimingFunction = {
  linear: linear,
  in: (cubic-bezier(0.4, 0, 1, 1)),
  out: (cubic-bezier(0, 0, 0.2, 1)),
  in-out: (cubic-bezier(0.4, 0, 0.2, 1)),
};

$transitionDuration = {
  \\"75\\": 75ms,
  \\"100\\": 100ms,
  \\"150\\": 150ms,
  \\"200\\": 200ms,
  \\"300\\": 300ms,
  \\"500\\": 500ms,
  \\"700\\": 700ms,
  \\"1000\\": 1000ms,
};

$transitionDelay = {
  \\"75\\": 75ms,
  \\"100\\": 100ms,
  \\"150\\": 150ms,
  \\"200\\": 200ms,
  \\"300\\": 300ms,
  \\"500\\": 500ms,
  \\"700\\": 700ms,
  \\"1000\\": 1000ms,
};

$animation = {
  none: none,
  spin: spin 1s linear infinite,
  ping: (ping 1s cubic-bezier(0, 0, 0.2, 1) infinite),
  pulse: (pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite),
  bounce: bounce 1s infinite,
};

$keyframes = {
  spin-to-transform: rotate(360deg),
  \\"ping-75-100-transform\\": scale(2),
  \\"ping-75-100-opacity\\": 0,
  \\"pulse-50-opacity\\": .5,
  \\"bounce-0-100-transform\\": translateY(-25%),
  \\"bounce-0-100-animationTimingFunction\\": (cubic-bezier(0.8,0,1,1)),
  \\"bounce-50-transform\\": none,
  \\"bounce-50-animationTimingFunction\\": (cubic-bezier(0,0,0.2,1)),
};
"
`;

exports[`Stylus converter full config Converts to nested map 1`] = `
"
$screens-sm = 640px;
$screens-md = 768px;
$screens-lg = 1024px;
$screens-xl = 1280px;

$fontFamily-display = (Gilroy,sans-serif);
$fontFamily-body = (Graphik,sans-serif);

$borderWidth-0 = 0;
$borderWidth-2 = 2px;
$borderWidth-4 = 4px;
$borderWidth-default = 1px;

$colors-transparent = transparent;
$colors-current = currentColor;
$colors-black = #000;
$colors-white = #fff;
$colors-gray-100 = #f7fafc;
$colors-gray-200 = #edf2f7;
$colors-gray-300 = #e2e8f0;
$colors-gray-400 = #cbd5e0;
$colors-gray-500 = #a0aec0;
$colors-gray-600 = #718096;
$colors-gray-700 = #4a5568;
$colors-gray-800 = #2d3748;
$colors-gray-900 = #1a202c;
$colors-red-100 = #fff5f5;
$colors-red-200 = #fed7d7;
$colors-red-300 = #feb2b2;
$colors-red-400 = #fc8181;
$colors-red-500 = #f56565;
$colors-red-600 = #e53e3e;
$colors-red-700 = #c53030;
$colors-red-800 = #9b2c2c;
$colors-red-900 = #742a2a;
$colors-orange-100 = #fffaf0;
$colors-orange-200 = #feebc8;
$colors-orange-300 = #fbd38d;
$colors-orange-400 = #f6ad55;
$colors-orange-500 = #ed8936;
$colors-orange-600 = #dd6b20;
$colors-orange-700 = #c05621;
$colors-orange-800 = #9c4221;
$colors-orange-900 = #7b341e;
$colors-yellow-100 = #fffff0;
$colors-yellow-200 = #fefcbf;
$colors-yellow-300 = #faf089;
$colors-yellow-400 = #f6e05e;
$colors-yellow-500 = #ecc94b;
$colors-yellow-600 = #d69e2e;
$colors-yellow-700 = #b7791f;
$colors-yellow-800 = #975a16;
$colors-yellow-900 = #744210;
$colors-green-100 = #f0fff4;
$colors-green-200 = #c6f6d5;
$colors-green-300 = #9ae6b4;
$colors-green-400 = #68d391;
$colors-green-500 = #48bb78;
$colors-green-600 = #38a169;
$colors-green-700 = #2f855a;
$colors-green-800 = #276749;
$colors-green-900 = #22543d;
$colors-teal-100 = #e6fffa;
$colors-teal-200 = #b2f5ea;
$colors-teal-300 = #81e6d9;
$colors-teal-400 = #4fd1c5;
$colors-teal-500 = #38b2ac;
$colors-teal-600 = #319795;
$colors-teal-700 = #2c7a7b;
$colors-teal-800 = #285e61;
$colors-teal-900 = #234e52;
$colors-blue-100 = #ebf8ff;
$colors-blue-200 = #bee3f8;
$colors-blue-300 = #90cdf4;
$colors-blue-400 = #63b3ed;
$colors-blue-500 = #4299e1;
$colors-blue-600 = #3182ce;
$colors-blue-700 = #2b6cb0;
$colors-blue-800 = #2c5282;
$colors-blue-900 = #2a4365;
$colors-indigo-100 = #ebf4ff;
$colors-indigo-200 = #c3dafe;
$colors-indigo-300 = #a3bffa;
$colors-indigo-400 = #7f9cf5;
$colors-indigo-500 = #667eea;
$colors-indigo-600 = #5a67d8;
$colors-indigo-700 = #4c51bf;
$colors-indigo-800 = #434190;
$colors-indigo-900 = #3c366b;
$colors-purple-100 = #faf5ff;
$colors-purple-200 = #e9d8fd;
$colors-purple-300 = #d6bcfa;
$colors-purple-400 = #b794f4;
$colors-purple-500 = #9f7aea;
$colors-purple-600 = #805ad5;
$colors-purple-700 = #6b46c1;
$colors-purple-800 = #553c9a;
$colors-purple-900 = #44337a;
$colors-pink-100 = #fff5f7;
$colors-pink-200 = #fed7e2;
$colors-pink-300 = #fbb6ce;
$colors-pink-400 = #f687b3;
$colors-pink-500 = #ed64a6;
$colors-pink-600 = #d53f8c;
$colors-pink-700 = #b83280;
$colors-pink-800 = #97266d;
$colors-pink-900 = #702459;
$colors-cyan = #9cdbff;

$spacing-0 = 0;
$spacing-1 = 0.25rem;
$spacing-2 = 0.5rem;
$spacing-3 = 0.75rem;
$spacing-4 = 1rem;
$spacing-5 = 1.25rem;
$spacing-6 = 1.5rem;
$spacing-8 = 2rem;
$spacing-10 = 2.5rem;
$spacing-12 = 3rem;
$spacing-16 = 4rem;
$spacing-20 = 5rem;
$spacing-24 = 6rem;
$spacing-32 = 8rem;
$spacing-40 = 10rem;
$spacing-48 = 12rem;
$spacing-56 = 14rem;
$spacing-64 = 16rem;
$spacing-96 = 24rem;
$spacing-128 = 32rem;
$spacing-px = 1px;

$backgroundColor-transparent = transparent;
$backgroundColor-current = currentColor;
$backgroundColor-black = #000;
$backgroundColor-white = #fff;
$backgroundColor-gray-100 = #f7fafc;
$backgroundColor-gray-200 = #edf2f7;
$backgroundColor-gray-300 = #e2e8f0;
$backgroundColor-gray-400 = #cbd5e0;
$backgroundColor-gray-500 = #a0aec0;
$backgroundColor-gray-600 = #718096;
$backgroundColor-gray-700 = #4a5568;
$backgroundColor-gray-800 = #2d3748;
$backgroundColor-gray-900 = #1a202c;
$backgroundColor-red-100 = #fff5f5;
$backgroundColor-red-200 = #fed7d7;
$backgroundColor-red-300 = #feb2b2;
$backgroundColor-red-400 = #fc8181;
$backgroundColor-red-500 = #f56565;
$backgroundColor-red-600 = #e53e3e;
$backgroundColor-red-700 = #c53030;
$backgroundColor-red-800 = #9b2c2c;
$backgroundColor-red-900 = #742a2a;
$backgroundColor-orange-100 = #fffaf0;
$backgroundColor-orange-200 = #feebc8;
$backgroundColor-orange-300 = #fbd38d;
$backgroundColor-orange-400 = #f6ad55;
$backgroundColor-orange-500 = #ed8936;
$backgroundColor-orange-600 = #dd6b20;
$backgroundColor-orange-700 = #c05621;
$backgroundColor-orange-800 = #9c4221;
$backgroundColor-orange-900 = #7b341e;
$backgroundColor-yellow-100 = #fffff0;
$backgroundColor-yellow-200 = #fefcbf;
$backgroundColor-yellow-300 = #faf089;
$backgroundColor-yellow-400 = #f6e05e;
$backgroundColor-yellow-500 = #ecc94b;
$backgroundColor-yellow-600 = #d69e2e;
$backgroundColor-yellow-700 = #b7791f;
$backgroundColor-yellow-800 = #975a16;
$backgroundColor-yellow-900 = #744210;
$backgroundColor-green-100 = #f0fff4;
$backgroundColor-green-200 = #c6f6d5;
$backgroundColor-green-300 = #9ae6b4;
$backgroundColor-green-400 = #68d391;
$backgroundColor-green-500 = #48bb78;
$backgroundColor-green-600 = #38a169;
$backgroundColor-green-700 = #2f855a;
$backgroundColor-green-800 = #276749;
$backgroundColor-green-900 = #22543d;
$backgroundColor-teal-100 = #e6fffa;
$backgroundColor-teal-200 = #b2f5ea;
$backgroundColor-teal-300 = #81e6d9;
$backgroundColor-teal-400 = #4fd1c5;
$backgroundColor-teal-500 = #38b2ac;
$backgroundColor-teal-600 = #319795;
$backgroundColor-teal-700 = #2c7a7b;
$backgroundColor-teal-800 = #285e61;
$backgroundColor-teal-900 = #234e52;
$backgroundColor-blue-100 = #ebf8ff;
$backgroundColor-blue-200 = #bee3f8;
$backgroundColor-blue-300 = #90cdf4;
$backgroundColor-blue-400 = #63b3ed;
$backgroundColor-blue-500 = #4299e1;
$backgroundColor-blue-600 = #3182ce;
$backgroundColor-blue-700 = #2b6cb0;
$backgroundColor-blue-800 = #2c5282;
$backgroundColor-blue-900 = #2a4365;
$backgroundColor-indigo-100 = #ebf4ff;
$backgroundColor-indigo-200 = #c3dafe;
$backgroundColor-indigo-300 = #a3bffa;
$backgroundColor-indigo-400 = #7f9cf5;
$backgroundColor-indigo-500 = #667eea;
$backgroundColor-indigo-600 = #5a67d8;
$backgroundColor-indigo-700 = #4c51bf;
$backgroundColor-indigo-800 = #434190;
$backgroundColor-indigo-900 = #3c366b;
$backgroundColor-purple-100 = #faf5ff;
$backgroundColor-purple-200 = #e9d8fd;
$backgroundColor-purple-300 = #d6bcfa;
$backgroundColor-purple-400 = #b794f4;
$backgroundColor-purple-500 = #9f7aea;
$backgroundColor-purple-600 = #805ad5;
$backgroundColor-purple-700 = #6b46c1;
$backgroundColor-purple-800 = #553c9a;
$backgroundColor-purple-900 = #44337a;
$backgroundColor-pink-100 = #fff5f7;
$backgroundColor-pink-200 = #fed7e2;
$backgroundColor-pink-300 = #fbb6ce;
$backgroundColor-pink-400 = #f687b3;
$backgroundColor-pink-500 = #ed64a6;
$backgroundColor-pink-600 = #d53f8c;
$backgroundColor-pink-700 = #b83280;
$backgroundColor-pink-800 = #97266d;
$backgroundColor-pink-900 = #702459;
$backgroundColor-cyan = #9cdbff;

$backgroundImage-gradient-to-t = (linear-gradient(to top, var(--gradient-color-stops)));
$backgroundImage-gradient-to-tr = (linear-gradient(to top right, var(--gradient-color-stops)));
$backgroundImage-gradient-to-r = (linear-gradient(to right, var(--gradient-color-stops)));
$backgroundImage-gradient-to-br = (linear-gradient(to bottom right, var(--gradient-color-stops)));
$backgroundImage-gradient-to-b = (linear-gradient(to bottom, var(--gradient-color-stops)));
$backgroundImage-gradient-to-bl = (linear-gradient(to bottom left, var(--gradient-color-stops)));
$backgroundImage-gradient-to-l = (linear-gradient(to left, var(--gradient-color-stops)));
$backgroundImage-gradient-to-tl = (linear-gradient(to top left, var(--gradient-color-stops)));

$gradientColorStops-transparent = transparent;
$gradientColorStops-current = currentColor;
$gradientColorStops-black = #000;
$gradientColorStops-white = #fff;
$gradientColorStops-gray-100 = #f7fafc;
$gradientColorStops-gray-200 = #edf2f7;
$gradientColorStops-gray-300 = #e2e8f0;
$gradientColorStops-gray-400 = #cbd5e0;
$gradientColorStops-gray-500 = #a0aec0;
$gradientColorStops-gray-600 = #718096;
$gradientColorStops-gray-700 = #4a5568;
$gradientColorStops-gray-800 = #2d3748;
$gradientColorStops-gray-900 = #1a202c;
$gradientColorStops-red-100 = #fff5f5;
$gradientColorStops-red-200 = #fed7d7;
$gradientColorStops-red-300 = #feb2b2;
$gradientColorStops-red-400 = #fc8181;
$gradientColorStops-red-500 = #f56565;
$gradientColorStops-red-600 = #e53e3e;
$gradientColorStops-red-700 = #c53030;
$gradientColorStops-red-800 = #9b2c2c;
$gradientColorStops-red-900 = #742a2a;
$gradientColorStops-orange-100 = #fffaf0;
$gradientColorStops-orange-200 = #feebc8;
$gradientColorStops-orange-300 = #fbd38d;
$gradientColorStops-orange-400 = #f6ad55;
$gradientColorStops-orange-500 = #ed8936;
$gradientColorStops-orange-600 = #dd6b20;
$gradientColorStops-orange-700 = #c05621;
$gradientColorStops-orange-800 = #9c4221;
$gradientColorStops-orange-900 = #7b341e;
$gradientColorStops-yellow-100 = #fffff0;
$gradientColorStops-yellow-200 = #fefcbf;
$gradientColorStops-yellow-300 = #faf089;
$gradientColorStops-yellow-400 = #f6e05e;
$gradientColorStops-yellow-500 = #ecc94b;
$gradientColorStops-yellow-600 = #d69e2e;
$gradientColorStops-yellow-700 = #b7791f;
$gradientColorStops-yellow-800 = #975a16;
$gradientColorStops-yellow-900 = #744210;
$gradientColorStops-green-100 = #f0fff4;
$gradientColorStops-green-200 = #c6f6d5;
$gradientColorStops-green-300 = #9ae6b4;
$gradientColorStops-green-400 = #68d391;
$gradientColorStops-green-500 = #48bb78;
$gradientColorStops-green-600 = #38a169;
$gradientColorStops-green-700 = #2f855a;
$gradientColorStops-green-800 = #276749;
$gradientColorStops-green-900 = #22543d;
$gradientColorStops-teal-100 = #e6fffa;
$gradientColorStops-teal-200 = #b2f5ea;
$gradientColorStops-teal-300 = #81e6d9;
$gradientColorStops-teal-400 = #4fd1c5;
$gradientColorStops-teal-500 = #38b2ac;
$gradientColorStops-teal-600 = #319795;
$gradientColorStops-teal-700 = #2c7a7b;
$gradientColorStops-teal-800 = #285e61;
$gradientColorStops-teal-900 = #234e52;
$gradientColorStops-blue-100 = #ebf8ff;
$gradientColorStops-blue-200 = #bee3f8;
$gradientColorStops-blue-300 = #90cdf4;
$gradientColorStops-blue-400 = #63b3ed;
$gradientColorStops-blue-500 = #4299e1;
$gradientColorStops-blue-600 = #3182ce;
$gradientColorStops-blue-700 = #2b6cb0;
$gradientColorStops-blue-800 = #2c5282;
$gradientColorStops-blue-900 = #2a4365;
$gradientColorStops-indigo-100 = #ebf4ff;
$gradientColorStops-indigo-200 = #c3dafe;
$gradientColorStops-indigo-300 = #a3bffa;
$gradientColorStops-indigo-400 = #7f9cf5;
$gradientColorStops-indigo-500 = #667eea;
$gradientColorStops-indigo-600 = #5a67d8;
$gradientColorStops-indigo-700 = #4c51bf;
$gradientColorStops-indigo-800 = #434190;
$gradientColorStops-indigo-900 = #3c366b;
$gradientColorStops-purple-100 = #faf5ff;
$gradientColorStops-purple-200 = #e9d8fd;
$gradientColorStops-purple-300 = #d6bcfa;
$gradientColorStops-purple-400 = #b794f4;
$gradientColorStops-purple-500 = #9f7aea;
$gradientColorStops-purple-600 = #805ad5;
$gradientColorStops-purple-700 = #6b46c1;
$gradientColorStops-purple-800 = #553c9a;
$gradientColorStops-purple-900 = #44337a;
$gradientColorStops-pink-100 = #fff5f7;
$gradientColorStops-pink-200 = #fed7e2;
$gradientColorStops-pink-300 = #fbb6ce;
$gradientColorStops-pink-400 = #f687b3;
$gradientColorStops-pink-500 = #ed64a6;
$gradientColorStops-pink-600 = #d53f8c;
$gradientColorStops-pink-700 = #b83280;
$gradientColorStops-pink-800 = #97266d;
$gradientColorStops-pink-900 = #702459;
$gradientColorStops-cyan = #9cdbff;

$backgroundOpacity-0 = 0;
$backgroundOpacity-25 = 0.25;
$backgroundOpacity-50 = 0.5;
$backgroundOpacity-75 = 0.75;
$backgroundOpacity-100 = 1;

$backgroundPosition-bottom = bottom;
$backgroundPosition-center = center;
$backgroundPosition-left = left;
$backgroundPosition-left-bottom = left bottom;
$backgroundPosition-left-top = left top;
$backgroundPosition-right = right;
$backgroundPosition-right-bottom = right bottom;
$backgroundPosition-right-top = right top;
$backgroundPosition-top = top;

$backgroundSize-auto = auto;
$backgroundSize-cover = cover;
$backgroundSize-contain = contain;

$borderColor-transparent = transparent;
$borderColor-current = currentColor;
$borderColor-black = #000;
$borderColor-white = #fff;
$borderColor-gray-100 = #f7fafc;
$borderColor-gray-200 = #edf2f7;
$borderColor-gray-300 = #e2e8f0;
$borderColor-gray-400 = #cbd5e0;
$borderColor-gray-500 = #a0aec0;
$borderColor-gray-600 = #718096;
$borderColor-gray-700 = #4a5568;
$borderColor-gray-800 = #2d3748;
$borderColor-gray-900 = #1a202c;
$borderColor-red-100 = #fff5f5;
$borderColor-red-200 = #fed7d7;
$borderColor-red-300 = #feb2b2;
$borderColor-red-400 = #fc8181;
$borderColor-red-500 = #f56565;
$borderColor-red-600 = #e53e3e;
$borderColor-red-700 = #c53030;
$borderColor-red-800 = #9b2c2c;
$borderColor-red-900 = #742a2a;
$borderColor-orange-100 = #fffaf0;
$borderColor-orange-200 = #feebc8;
$borderColor-orange-300 = #fbd38d;
$borderColor-orange-400 = #f6ad55;
$borderColor-orange-500 = #ed8936;
$borderColor-orange-600 = #dd6b20;
$borderColor-orange-700 = #c05621;
$borderColor-orange-800 = #9c4221;
$borderColor-orange-900 = #7b341e;
$borderColor-yellow-100 = #fffff0;
$borderColor-yellow-200 = #fefcbf;
$borderColor-yellow-300 = #faf089;
$borderColor-yellow-400 = #f6e05e;
$borderColor-yellow-500 = #ecc94b;
$borderColor-yellow-600 = #d69e2e;
$borderColor-yellow-700 = #b7791f;
$borderColor-yellow-800 = #975a16;
$borderColor-yellow-900 = #744210;
$borderColor-green-100 = #f0fff4;
$borderColor-green-200 = #c6f6d5;
$borderColor-green-300 = #9ae6b4;
$borderColor-green-400 = #68d391;
$borderColor-green-500 = #48bb78;
$borderColor-green-600 = #38a169;
$borderColor-green-700 = #2f855a;
$borderColor-green-800 = #276749;
$borderColor-green-900 = #22543d;
$borderColor-teal-100 = #e6fffa;
$borderColor-teal-200 = #b2f5ea;
$borderColor-teal-300 = #81e6d9;
$borderColor-teal-400 = #4fd1c5;
$borderColor-teal-500 = #38b2ac;
$borderColor-teal-600 = #319795;
$borderColor-teal-700 = #2c7a7b;
$borderColor-teal-800 = #285e61;
$borderColor-teal-900 = #234e52;
$borderColor-blue-100 = #ebf8ff;
$borderColor-blue-200 = #bee3f8;
$borderColor-blue-300 = #90cdf4;
$borderColor-blue-400 = #63b3ed;
$borderColor-blue-500 = #4299e1;
$borderColor-blue-600 = #3182ce;
$borderColor-blue-700 = #2b6cb0;
$borderColor-blue-800 = #2c5282;
$borderColor-blue-900 = #2a4365;
$borderColor-indigo-100 = #ebf4ff;
$borderColor-indigo-200 = #c3dafe;
$borderColor-indigo-300 = #a3bffa;
$borderColor-indigo-400 = #7f9cf5;
$borderColor-indigo-500 = #667eea;
$borderColor-indigo-600 = #5a67d8;
$borderColor-indigo-700 = #4c51bf;
$borderColor-indigo-800 = #434190;
$borderColor-indigo-900 = #3c366b;
$borderColor-purple-100 = #faf5ff;
$borderColor-purple-200 = #e9d8fd;
$borderColor-purple-300 = #d6bcfa;
$borderColor-purple-400 = #b794f4;
$borderColor-purple-500 = #9f7aea;
$borderColor-purple-600 = #805ad5;
$borderColor-purple-700 = #6b46c1;
$borderColor-purple-800 = #553c9a;
$borderColor-purple-900 = #44337a;
$borderColor-pink-100 = #fff5f7;
$borderColor-pink-200 = #fed7e2;
$borderColor-pink-300 = #fbb6ce;
$borderColor-pink-400 = #f687b3;
$borderColor-pink-500 = #ed64a6;
$borderColor-pink-600 = #d53f8c;
$borderColor-pink-700 = #b83280;
$borderColor-pink-800 = #97266d;
$borderColor-pink-900 = #702459;
$borderColor-cyan = #9cdbff;
$borderColor-default = #e2e8f0;

$borderOpacity-0 = 0;
$borderOpacity-25 = 0.25;
$borderOpacity-50 = 0.5;
$borderOpacity-75 = 0.75;
$borderOpacity-100 = 1;

$borderRadius-none = 0;
$borderRadius-sm = 0.125rem;
$borderRadius-default = 0.25rem;
$borderRadius-md = 0.375rem;
$borderRadius-lg = 0.5rem;
$borderRadius-full = 9999px;

$boxShadow-xs = (0 0 0 1px rgba(0, 0, 0, 0.05));
$boxShadow-sm = (0 1px 2px 0 rgba(0, 0, 0, 0.05));
$boxShadow-default = (0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06));
$boxShadow-md = (0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06));
$boxShadow-lg = (0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05));
$boxShadow-xl = (0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04));
$boxShadow-2xl = (0 25px 50px -12px rgba(0, 0, 0, 0.25));
$boxShadow-inner = (inset 0 2px 4px 0 rgba(0, 0, 0, 0.06));
$boxShadow-outline = (0 0 0 3px rgba(66, 153, 225, 0.5));
$boxShadow-none = none;


$cursor-auto = auto;
$cursor-default = default;
$cursor-pointer = pointer;
$cursor-wait = wait;
$cursor-text = text;
$cursor-move = move;
$cursor-not-allowed = not-allowed;

$divideColor-transparent = transparent;
$divideColor-current = currentColor;
$divideColor-black = #000;
$divideColor-white = #fff;
$divideColor-gray-100 = #f7fafc;
$divideColor-gray-200 = #edf2f7;
$divideColor-gray-300 = #e2e8f0;
$divideColor-gray-400 = #cbd5e0;
$divideColor-gray-500 = #a0aec0;
$divideColor-gray-600 = #718096;
$divideColor-gray-700 = #4a5568;
$divideColor-gray-800 = #2d3748;
$divideColor-gray-900 = #1a202c;
$divideColor-red-100 = #fff5f5;
$divideColor-red-200 = #fed7d7;
$divideColor-red-300 = #feb2b2;
$divideColor-red-400 = #fc8181;
$divideColor-red-500 = #f56565;
$divideColor-red-600 = #e53e3e;
$divideColor-red-700 = #c53030;
$divideColor-red-800 = #9b2c2c;
$divideColor-red-900 = #742a2a;
$divideColor-orange-100 = #fffaf0;
$divideColor-orange-200 = #feebc8;
$divideColor-orange-300 = #fbd38d;
$divideColor-orange-400 = #f6ad55;
$divideColor-orange-500 = #ed8936;
$divideColor-orange-600 = #dd6b20;
$divideColor-orange-700 = #c05621;
$divideColor-orange-800 = #9c4221;
$divideColor-orange-900 = #7b341e;
$divideColor-yellow-100 = #fffff0;
$divideColor-yellow-200 = #fefcbf;
$divideColor-yellow-300 = #faf089;
$divideColor-yellow-400 = #f6e05e;
$divideColor-yellow-500 = #ecc94b;
$divideColor-yellow-600 = #d69e2e;
$divideColor-yellow-700 = #b7791f;
$divideColor-yellow-800 = #975a16;
$divideColor-yellow-900 = #744210;
$divideColor-green-100 = #f0fff4;
$divideColor-green-200 = #c6f6d5;
$divideColor-green-300 = #9ae6b4;
$divideColor-green-400 = #68d391;
$divideColor-green-500 = #48bb78;
$divideColor-green-600 = #38a169;
$divideColor-green-700 = #2f855a;
$divideColor-green-800 = #276749;
$divideColor-green-900 = #22543d;
$divideColor-teal-100 = #e6fffa;
$divideColor-teal-200 = #b2f5ea;
$divideColor-teal-300 = #81e6d9;
$divideColor-teal-400 = #4fd1c5;
$divideColor-teal-500 = #38b2ac;
$divideColor-teal-600 = #319795;
$divideColor-teal-700 = #2c7a7b;
$divideColor-teal-800 = #285e61;
$divideColor-teal-900 = #234e52;
$divideColor-blue-100 = #ebf8ff;
$divideColor-blue-200 = #bee3f8;
$divideColor-blue-300 = #90cdf4;
$divideColor-blue-400 = #63b3ed;
$divideColor-blue-500 = #4299e1;
$divideColor-blue-600 = #3182ce;
$divideColor-blue-700 = #2b6cb0;
$divideColor-blue-800 = #2c5282;
$divideColor-blue-900 = #2a4365;
$divideColor-indigo-100 = #ebf4ff;
$divideColor-indigo-200 = #c3dafe;
$divideColor-indigo-300 = #a3bffa;
$divideColor-indigo-400 = #7f9cf5;
$divideColor-indigo-500 = #667eea;
$divideColor-indigo-600 = #5a67d8;
$divideColor-indigo-700 = #4c51bf;
$divideColor-indigo-800 = #434190;
$divideColor-indigo-900 = #3c366b;
$divideColor-purple-100 = #faf5ff;
$divideColor-purple-200 = #e9d8fd;
$divideColor-purple-300 = #d6bcfa;
$divideColor-purple-400 = #b794f4;
$divideColor-purple-500 = #9f7aea;
$divideColor-purple-600 = #805ad5;
$divideColor-purple-700 = #6b46c1;
$divideColor-purple-800 = #553c9a;
$divideColor-purple-900 = #44337a;
$divideColor-pink-100 = #fff5f7;
$divideColor-pink-200 = #fed7e2;
$divideColor-pink-300 = #fbb6ce;
$divideColor-pink-400 = #f687b3;
$divideColor-pink-500 = #ed64a6;
$divideColor-pink-600 = #d53f8c;
$divideColor-pink-700 = #b83280;
$divideColor-pink-800 = #97266d;
$divideColor-pink-900 = #702459;
$divideColor-cyan = #9cdbff;
$divideColor-default = #e2e8f0;

$divideOpacity-0 = 0;
$divideOpacity-25 = 0.25;
$divideOpacity-50 = 0.5;
$divideOpacity-75 = 0.75;
$divideOpacity-100 = 1;

$divideWidth-0 = 0;
$divideWidth-2 = 2px;
$divideWidth-4 = 4px;
$divideWidth-default = 1px;

$fill-current = currentColor;

$flex-1 = 1 1 0%;
$flex-auto = 1 1 auto;
$flex-initial = 0 1 auto;
$flex-none = none;

$flexGrow-0 = 0;
$flexGrow-default = 1;

$flexShrink-0 = 0;
$flexShrink-default = 1;

$fontSize-xs = 0.75rem;
$fontSize-sm = 0.875rem;
$fontSize-base = 1rem;
$fontSize-lg = 1.125rem;
$fontSize-xl = 1.25rem;
$fontSize-2xl = 1.5rem;
$fontSize-3xl = 1.875rem;
$fontSize-4xl = 2.25rem;
$fontSize-5xl = 3rem;
$fontSize-6xl = 4rem;

$fontWeight-hairline = 100;
$fontWeight-thin = 200;
$fontWeight-light = 300;
$fontWeight-normal = 400;
$fontWeight-medium = 500;
$fontWeight-semibold = 600;
$fontWeight-bold = 700;
$fontWeight-extrabold = 800;
$fontWeight-black = 900;

$height-0 = 0;
$height-1 = 0.25rem;
$height-2 = 0.5rem;
$height-3 = 0.75rem;
$height-4 = 1rem;
$height-5 = 1.25rem;
$height-6 = 1.5rem;
$height-8 = 2rem;
$height-10 = 2.5rem;
$height-12 = 3rem;
$height-16 = 4rem;
$height-20 = 5rem;
$height-24 = 6rem;
$height-32 = 8rem;
$height-40 = 10rem;
$height-48 = 12rem;
$height-56 = 14rem;
$height-64 = 16rem;
$height-96 = 24rem;
$height-128 = 32rem;
$height-auto = auto;
$height-px = 1px;
$height-full = 100%;
$height-screen = 100vh;

$inset-0 = 0;
$inset-auto = auto;

$letterSpacing-tighter = -0.05em;
$letterSpacing-tight = -0.025em;
$letterSpacing-normal = 0;
$letterSpacing-wide = 0.025em;
$letterSpacing-wider = 0.05em;
$letterSpacing-widest = 0.1em;

$lineHeight-3 = .75rem;
$lineHeight-4 = 1rem;
$lineHeight-5 = 1.25rem;
$lineHeight-6 = 1.5rem;
$lineHeight-7 = 1.75rem;
$lineHeight-8 = 2rem;
$lineHeight-9 = 2.25rem;
$lineHeight-10 = 2.5rem;
$lineHeight-none = 1;
$lineHeight-tight = 1.25;
$lineHeight-snug = 1.375;
$lineHeight-normal = 1.5;
$lineHeight-relaxed = 1.625;
$lineHeight-loose = 2;

$listStyleType-none = none;
$listStyleType-disc = disc;
$listStyleType-decimal = decimal;

$margin-0 = 0;
$margin-1 = 0.25rem;
$margin-2 = 0.5rem;
$margin-3 = 0.75rem;
$margin-4 = 1rem;
$margin-5 = 1.25rem;
$margin-6 = 1.5rem;
$margin-8 = 2rem;
$margin-10 = 2.5rem;
$margin-12 = 3rem;
$margin-16 = 4rem;
$margin-20 = 5rem;
$margin-24 = 6rem;
$margin-32 = 8rem;
$margin-40 = 10rem;
$margin-48 = 12rem;
$margin-56 = 14rem;
$margin-64 = 16rem;
$margin-96 = 24rem;
$margin-128 = 32rem;
$margin-auto = auto;
$margin-px = 1px;
$margin--1 = -0.25rem;
$margin--2 = -0.5rem;
$margin--3 = -0.75rem;
$margin--4 = -1rem;
$margin--5 = -1.25rem;
$margin--6 = -1.5rem;
$margin--8 = -2rem;
$margin--10 = -2.5rem;
$margin--12 = -3rem;
$margin--16 = -4rem;
$margin--20 = -5rem;
$margin--24 = -6rem;
$margin--32 = -8rem;
$margin--40 = -10rem;
$margin--48 = -12rem;
$margin--56 = -14rem;
$margin--64 = -16rem;
$margin--96 = -24rem;
$margin--128 = -32rem;
$margin--px = -1px;

$maxHeight-full = 100%;
$maxHeight-screen = 100vh;

$maxWidth-none = none;
$maxWidth-xs = 20rem;
$maxWidth-sm = 24rem;
$maxWidth-md = 28rem;
$maxWidth-lg = 32rem;
$maxWidth-xl = 36rem;
$maxWidth-2xl = 42rem;
$maxWidth-3xl = 48rem;
$maxWidth-4xl = 56rem;
$maxWidth-5xl = 64rem;
$maxWidth-6xl = 72rem;
$maxWidth-full = 100%;
$maxWidth-screen-sm = 640px;
$maxWidth-screen-md = 768px;
$maxWidth-screen-lg = 1024px;
$maxWidth-screen-xl = 1280px;

$minHeight-0 = 0;
$minHeight-full = 100%;
$minHeight-screen = 100vh;

$minWidth-0 = 0;
$minWidth-full = 100%;

$objectPosition-bottom = bottom;
$objectPosition-center = center;
$objectPosition-left = left;
$objectPosition-left-bottom = left bottom;
$objectPosition-left-top = left top;
$objectPosition-right = right;
$objectPosition-right-bottom = right bottom;
$objectPosition-right-top = right top;
$objectPosition-top = top;

$opacity-0 = 0;
$opacity-25 = 0.25;
$opacity-50 = 0.5;
$opacity-75 = 0.75;
$opacity-100 = 1;

$order-1 = 1;
$order-2 = 2;
$order-3 = 3;
$order-4 = 4;
$order-5 = 5;
$order-6 = 6;
$order-7 = 7;
$order-8 = 8;
$order-9 = 9;
$order-10 = 10;
$order-11 = 11;
$order-12 = 12;
$order-first = -9999;
$order-last = 9999;
$order-none = 0;

$padding-0 = 0;
$padding-1 = 0.25rem;
$padding-2 = 0.5rem;
$padding-3 = 0.75rem;
$padding-4 = 1rem;
$padding-5 = 1.25rem;
$padding-6 = 1.5rem;
$padding-8 = 2rem;
$padding-10 = 2.5rem;
$padding-12 = 3rem;
$padding-16 = 4rem;
$padding-20 = 5rem;
$padding-24 = 6rem;
$padding-32 = 8rem;
$padding-40 = 10rem;
$padding-48 = 12rem;
$padding-56 = 14rem;
$padding-64 = 16rem;
$padding-96 = 24rem;
$padding-128 = 32rem;
$padding-px = 1px;

$placeholderColor-transparent = transparent;
$placeholderColor-current = currentColor;
$placeholderColor-black = #000;
$placeholderColor-white = #fff;
$placeholderColor-gray-100 = #f7fafc;
$placeholderColor-gray-200 = #edf2f7;
$placeholderColor-gray-300 = #e2e8f0;
$placeholderColor-gray-400 = #cbd5e0;
$placeholderColor-gray-500 = #a0aec0;
$placeholderColor-gray-600 = #718096;
$placeholderColor-gray-700 = #4a5568;
$placeholderColor-gray-800 = #2d3748;
$placeholderColor-gray-900 = #1a202c;
$placeholderColor-red-100 = #fff5f5;
$placeholderColor-red-200 = #fed7d7;
$placeholderColor-red-300 = #feb2b2;
$placeholderColor-red-400 = #fc8181;
$placeholderColor-red-500 = #f56565;
$placeholderColor-red-600 = #e53e3e;
$placeholderColor-red-700 = #c53030;
$placeholderColor-red-800 = #9b2c2c;
$placeholderColor-red-900 = #742a2a;
$placeholderColor-orange-100 = #fffaf0;
$placeholderColor-orange-200 = #feebc8;
$placeholderColor-orange-300 = #fbd38d;
$placeholderColor-orange-400 = #f6ad55;
$placeholderColor-orange-500 = #ed8936;
$placeholderColor-orange-600 = #dd6b20;
$placeholderColor-orange-700 = #c05621;
$placeholderColor-orange-800 = #9c4221;
$placeholderColor-orange-900 = #7b341e;
$placeholderColor-yellow-100 = #fffff0;
$placeholderColor-yellow-200 = #fefcbf;
$placeholderColor-yellow-300 = #faf089;
$placeholderColor-yellow-400 = #f6e05e;
$placeholderColor-yellow-500 = #ecc94b;
$placeholderColor-yellow-600 = #d69e2e;
$placeholderColor-yellow-700 = #b7791f;
$placeholderColor-yellow-800 = #975a16;
$placeholderColor-yellow-900 = #744210;
$placeholderColor-green-100 = #f0fff4;
$placeholderColor-green-200 = #c6f6d5;
$placeholderColor-green-300 = #9ae6b4;
$placeholderColor-green-400 = #68d391;
$placeholderColor-green-500 = #48bb78;
$placeholderColor-green-600 = #38a169;
$placeholderColor-green-700 = #2f855a;
$placeholderColor-green-800 = #276749;
$placeholderColor-green-900 = #22543d;
$placeholderColor-teal-100 = #e6fffa;
$placeholderColor-teal-200 = #b2f5ea;
$placeholderColor-teal-300 = #81e6d9;
$placeholderColor-teal-400 = #4fd1c5;
$placeholderColor-teal-500 = #38b2ac;
$placeholderColor-teal-600 = #319795;
$placeholderColor-teal-700 = #2c7a7b;
$placeholderColor-teal-800 = #285e61;
$placeholderColor-teal-900 = #234e52;
$placeholderColor-blue-100 = #ebf8ff;
$placeholderColor-blue-200 = #bee3f8;
$placeholderColor-blue-300 = #90cdf4;
$placeholderColor-blue-400 = #63b3ed;
$placeholderColor-blue-500 = #4299e1;
$placeholderColor-blue-600 = #3182ce;
$placeholderColor-blue-700 = #2b6cb0;
$placeholderColor-blue-800 = #2c5282;
$placeholderColor-blue-900 = #2a4365;
$placeholderColor-indigo-100 = #ebf4ff;
$placeholderColor-indigo-200 = #c3dafe;
$placeholderColor-indigo-300 = #a3bffa;
$placeholderColor-indigo-400 = #7f9cf5;
$placeholderColor-indigo-500 = #667eea;
$placeholderColor-indigo-600 = #5a67d8;
$placeholderColor-indigo-700 = #4c51bf;
$placeholderColor-indigo-800 = #434190;
$placeholderColor-indigo-900 = #3c366b;
$placeholderColor-purple-100 = #faf5ff;
$placeholderColor-purple-200 = #e9d8fd;
$placeholderColor-purple-300 = #d6bcfa;
$placeholderColor-purple-400 = #b794f4;
$placeholderColor-purple-500 = #9f7aea;
$placeholderColor-purple-600 = #805ad5;
$placeholderColor-purple-700 = #6b46c1;
$placeholderColor-purple-800 = #553c9a;
$placeholderColor-purple-900 = #44337a;
$placeholderColor-pink-100 = #fff5f7;
$placeholderColor-pink-200 = #fed7e2;
$placeholderColor-pink-300 = #fbb6ce;
$placeholderColor-pink-400 = #f687b3;
$placeholderColor-pink-500 = #ed64a6;
$placeholderColor-pink-600 = #d53f8c;
$placeholderColor-pink-700 = #b83280;
$placeholderColor-pink-800 = #97266d;
$placeholderColor-pink-900 = #702459;
$placeholderColor-cyan = #9cdbff;

$placeholderOpacity-0 = 0;
$placeholderOpacity-25 = 0.25;
$placeholderOpacity-50 = 0.5;
$placeholderOpacity-75 = 0.75;
$placeholderOpacity-100 = 1;

$space-0 = 0;
$space-1 = 0.25rem;
$space-2 = 0.5rem;
$space-3 = 0.75rem;
$space-4 = 1rem;
$space-5 = 1.25rem;
$space-6 = 1.5rem;
$space-8 = 2rem;
$space-10 = 2.5rem;
$space-12 = 3rem;
$space-16 = 4rem;
$space-20 = 5rem;
$space-24 = 6rem;
$space-32 = 8rem;
$space-40 = 10rem;
$space-48 = 12rem;
$space-56 = 14rem;
$space-64 = 16rem;
$space-96 = 24rem;
$space-128 = 32rem;
$space-px = 1px;
$space--1 = -0.25rem;
$space--2 = -0.5rem;
$space--3 = -0.75rem;
$space--4 = -1rem;
$space--5 = -1.25rem;
$space--6 = -1.5rem;
$space--8 = -2rem;
$space--10 = -2.5rem;
$space--12 = -3rem;
$space--16 = -4rem;
$space--20 = -5rem;
$space--24 = -6rem;
$space--32 = -8rem;
$space--40 = -10rem;
$space--48 = -12rem;
$space--56 = -14rem;
$space--64 = -16rem;
$space--96 = -24rem;
$space--128 = -32rem;
$space--px = -1px;

$stroke-current = currentColor;

$strokeWidth-0 = 0;
$strokeWidth-1 = 1;
$strokeWidth-2 = 2;

$textColor-transparent = transparent;
$textColor-current = currentColor;
$textColor-black = #000;
$textColor-white = #fff;
$textColor-gray-100 = #f7fafc;
$textColor-gray-200 = #edf2f7;
$textColor-gray-300 = #e2e8f0;
$textColor-gray-400 = #cbd5e0;
$textColor-gray-500 = #a0aec0;
$textColor-gray-600 = #718096;
$textColor-gray-700 = #4a5568;
$textColor-gray-800 = #2d3748;
$textColor-gray-900 = #1a202c;
$textColor-red-100 = #fff5f5;
$textColor-red-200 = #fed7d7;
$textColor-red-300 = #feb2b2;
$textColor-red-400 = #fc8181;
$textColor-red-500 = #f56565;
$textColor-red-600 = #e53e3e;
$textColor-red-700 = #c53030;
$textColor-red-800 = #9b2c2c;
$textColor-red-900 = #742a2a;
$textColor-orange-100 = #fffaf0;
$textColor-orange-200 = #feebc8;
$textColor-orange-300 = #fbd38d;
$textColor-orange-400 = #f6ad55;
$textColor-orange-500 = #ed8936;
$textColor-orange-600 = #dd6b20;
$textColor-orange-700 = #c05621;
$textColor-orange-800 = #9c4221;
$textColor-orange-900 = #7b341e;
$textColor-yellow-100 = #fffff0;
$textColor-yellow-200 = #fefcbf;
$textColor-yellow-300 = #faf089;
$textColor-yellow-400 = #f6e05e;
$textColor-yellow-500 = #ecc94b;
$textColor-yellow-600 = #d69e2e;
$textColor-yellow-700 = #b7791f;
$textColor-yellow-800 = #975a16;
$textColor-yellow-900 = #744210;
$textColor-green-100 = #f0fff4;
$textColor-green-200 = #c6f6d5;
$textColor-green-300 = #9ae6b4;
$textColor-green-400 = #68d391;
$textColor-green-500 = #48bb78;
$textColor-green-600 = #38a169;
$textColor-green-700 = #2f855a;
$textColor-green-800 = #276749;
$textColor-green-900 = #22543d;
$textColor-teal-100 = #e6fffa;
$textColor-teal-200 = #b2f5ea;
$textColor-teal-300 = #81e6d9;
$textColor-teal-400 = #4fd1c5;
$textColor-teal-500 = #38b2ac;
$textColor-teal-600 = #319795;
$textColor-teal-700 = #2c7a7b;
$textColor-teal-800 = #285e61;
$textColor-teal-900 = #234e52;
$textColor-blue-100 = #ebf8ff;
$textColor-blue-200 = #bee3f8;
$textColor-blue-300 = #90cdf4;
$textColor-blue-400 = #63b3ed;
$textColor-blue-500 = #4299e1;
$textColor-blue-600 = #3182ce;
$textColor-blue-700 = #2b6cb0;
$textColor-blue-800 = #2c5282;
$textColor-blue-900 = #2a4365;
$textColor-indigo-100 = #ebf4ff;
$textColor-indigo-200 = #c3dafe;
$textColor-indigo-300 = #a3bffa;
$textColor-indigo-400 = #7f9cf5;
$textColor-indigo-500 = #667eea;
$textColor-indigo-600 = #5a67d8;
$textColor-indigo-700 = #4c51bf;
$textColor-indigo-800 = #434190;
$textColor-indigo-900 = #3c366b;
$textColor-purple-100 = #faf5ff;
$textColor-purple-200 = #e9d8fd;
$textColor-purple-300 = #d6bcfa;
$textColor-purple-400 = #b794f4;
$textColor-purple-500 = #9f7aea;
$textColor-purple-600 = #805ad5;
$textColor-purple-700 = #6b46c1;
$textColor-purple-800 = #553c9a;
$textColor-purple-900 = #44337a;
$textColor-pink-100 = #fff5f7;
$textColor-pink-200 = #fed7e2;
$textColor-pink-300 = #fbb6ce;
$textColor-pink-400 = #f687b3;
$textColor-pink-500 = #ed64a6;
$textColor-pink-600 = #d53f8c;
$textColor-pink-700 = #b83280;
$textColor-pink-800 = #97266d;
$textColor-pink-900 = #702459;
$textColor-cyan = #9cdbff;

$textOpacity-0 = 0;
$textOpacity-25 = 0.25;
$textOpacity-50 = 0.5;
$textOpacity-75 = 0.75;
$textOpacity-100 = 1;

$width-0 = 0;
$width-1 = 0.25rem;
$width-2 = 0.5rem;
$width-3 = 0.75rem;
$width-4 = 1rem;
$width-5 = 1.25rem;
$width-6 = 1.5rem;
$width-8 = 2rem;
$width-10 = 2.5rem;
$width-12 = 3rem;
$width-16 = 4rem;
$width-20 = 5rem;
$width-24 = 6rem;
$width-32 = 8rem;
$width-40 = 10rem;
$width-48 = 12rem;
$width-56 = 14rem;
$width-64 = 16rem;
$width-96 = 24rem;
$width-128 = 32rem;
$width-auto = auto;
$width-px = 1px;
$width-1\\\\/2 = 50%;
$width-1\\\\/3 = 33.333333%;
$width-2\\\\/3 = 66.666667%;
$width-1\\\\/4 = 25%;
$width-2\\\\/4 = 50%;
$width-3\\\\/4 = 75%;
$width-1\\\\/5 = 20%;
$width-2\\\\/5 = 40%;
$width-3\\\\/5 = 60%;
$width-4\\\\/5 = 80%;
$width-1\\\\/6 = 16.666667%;
$width-2\\\\/6 = 33.333333%;
$width-3\\\\/6 = 50%;
$width-4\\\\/6 = 66.666667%;
$width-5\\\\/6 = 83.333333%;
$width-1\\\\/12 = 8.333333%;
$width-2\\\\/12 = 16.666667%;
$width-3\\\\/12 = 25%;
$width-4\\\\/12 = 33.333333%;
$width-5\\\\/12 = 41.666667%;
$width-6\\\\/12 = 50%;
$width-7\\\\/12 = 58.333333%;
$width-8\\\\/12 = 66.666667%;
$width-9\\\\/12 = 75%;
$width-10\\\\/12 = 83.333333%;
$width-11\\\\/12 = 91.666667%;
$width-full = 100%;
$width-screen = 100vw;

$zIndex-0 = 0;
$zIndex-10 = 10;
$zIndex-20 = 20;
$zIndex-30 = 30;
$zIndex-40 = 40;
$zIndex-50 = 50;
$zIndex-auto = auto;

$gap-0 = 0;
$gap-1 = 0.25rem;
$gap-2 = 0.5rem;
$gap-3 = 0.75rem;
$gap-4 = 1rem;
$gap-5 = 1.25rem;
$gap-6 = 1.5rem;
$gap-8 = 2rem;
$gap-10 = 2.5rem;
$gap-12 = 3rem;
$gap-16 = 4rem;
$gap-20 = 5rem;
$gap-24 = 6rem;
$gap-32 = 8rem;
$gap-40 = 10rem;
$gap-48 = 12rem;
$gap-56 = 14rem;
$gap-64 = 16rem;
$gap-96 = 24rem;
$gap-128 = 32rem;
$gap-px = 1px;

$gridTemplateColumns-1 = (repeat(1, minmax(0, 1fr)));
$gridTemplateColumns-2 = (repeat(2, minmax(0, 1fr)));
$gridTemplateColumns-3 = (repeat(3, minmax(0, 1fr)));
$gridTemplateColumns-4 = (repeat(4, minmax(0, 1fr)));
$gridTemplateColumns-5 = (repeat(5, minmax(0, 1fr)));
$gridTemplateColumns-6 = (repeat(6, minmax(0, 1fr)));
$gridTemplateColumns-7 = (repeat(7, minmax(0, 1fr)));
$gridTemplateColumns-8 = (repeat(8, minmax(0, 1fr)));
$gridTemplateColumns-9 = (repeat(9, minmax(0, 1fr)));
$gridTemplateColumns-10 = (repeat(10, minmax(0, 1fr)));
$gridTemplateColumns-11 = (repeat(11, minmax(0, 1fr)));
$gridTemplateColumns-12 = (repeat(12, minmax(0, 1fr)));
$gridTemplateColumns-none = none;

$gridColumn-auto = auto;
$gridColumn-span-1 = span 1 / span 1;
$gridColumn-span-2 = span 2 / span 2;
$gridColumn-span-3 = span 3 / span 3;
$gridColumn-span-4 = span 4 / span 4;
$gridColumn-span-5 = span 5 / span 5;
$gridColumn-span-6 = span 6 / span 6;
$gridColumn-span-7 = span 7 / span 7;
$gridColumn-span-8 = span 8 / span 8;
$gridColumn-span-9 = span 9 / span 9;
$gridColumn-span-10 = span 10 / span 10;
$gridColumn-span-11 = span 11 / span 11;
$gridColumn-span-12 = span 12 / span 12;

$gridColumnStart-1 = 1;
$gridColumnStart-2 = 2;
$gridColumnStart-3 = 3;
$gridColumnStart-4 = 4;
$gridColumnStart-5 = 5;
$gridColumnStart-6 = 6;
$gridColumnStart-7 = 7;
$gridColumnStart-8 = 8;
$gridColumnStart-9 = 9;
$gridColumnStart-10 = 10;
$gridColumnStart-11 = 11;
$gridColumnStart-12 = 12;
$gridColumnStart-13 = 13;
$gridColumnStart-auto = auto;

$gridColumnEnd-1 = 1;
$gridColumnEnd-2 = 2;
$gridColumnEnd-3 = 3;
$gridColumnEnd-4 = 4;
$gridColumnEnd-5 = 5;
$gridColumnEnd-6 = 6;
$gridColumnEnd-7 = 7;
$gridColumnEnd-8 = 8;
$gridColumnEnd-9 = 9;
$gridColumnEnd-10 = 10;
$gridColumnEnd-11 = 11;
$gridColumnEnd-12 = 12;
$gridColumnEnd-13 = 13;
$gridColumnEnd-auto = auto;

$gridTemplateRows-1 = (repeat(1, minmax(0, 1fr)));
$gridTemplateRows-2 = (repeat(2, minmax(0, 1fr)));
$gridTemplateRows-3 = (repeat(3, minmax(0, 1fr)));
$gridTemplateRows-4 = (repeat(4, minmax(0, 1fr)));
$gridTemplateRows-5 = (repeat(5, minmax(0, 1fr)));
$gridTemplateRows-6 = (repeat(6, minmax(0, 1fr)));
$gridTemplateRows-none = none;

$gridRow-auto = auto;
$gridRow-span-1 = span 1 / span 1;
$gridRow-span-2 = span 2 / span 2;
$gridRow-span-3 = span 3 / span 3;
$gridRow-span-4 = span 4 / span 4;
$gridRow-span-5 = span 5 / span 5;
$gridRow-span-6 = span 6 / span 6;

$gridRowStart-1 = 1;
$gridRowStart-2 = 2;
$gridRowStart-3 = 3;
$gridRowStart-4 = 4;
$gridRowStart-5 = 5;
$gridRowStart-6 = 6;
$gridRowStart-7 = 7;
$gridRowStart-auto = auto;

$gridRowEnd-1 = 1;
$gridRowEnd-2 = 2;
$gridRowEnd-3 = 3;
$gridRowEnd-4 = 4;
$gridRowEnd-5 = 5;
$gridRowEnd-6 = 6;
$gridRowEnd-7 = 7;
$gridRowEnd-auto = auto;

$transformOrigin-center = center;
$transformOrigin-top = top;
$transformOrigin-top-right = top right;
$transformOrigin-right = right;
$transformOrigin-bottom-right = bottom right;
$transformOrigin-bottom = bottom;
$transformOrigin-bottom-left = bottom left;
$transformOrigin-left = left;
$transformOrigin-top-left = top left;

$scale-0 = 0;
$scale-50 = .5;
$scale-75 = .75;
$scale-90 = .9;
$scale-95 = .95;
$scale-100 = 1;
$scale-105 = 1.05;
$scale-110 = 1.1;
$scale-125 = 1.25;
$scale-150 = 1.5;

$rotate-0 = 0;
$rotate-45 = 45deg;
$rotate-90 = 90deg;
$rotate-180 = 180deg;
$rotate--180 = -180deg;
$rotate--90 = -90deg;
$rotate--45 = -45deg;

$translate-0 = 0;
$translate-1 = 0.25rem;
$translate-2 = 0.5rem;
$translate-3 = 0.75rem;
$translate-4 = 1rem;
$translate-5 = 1.25rem;
$translate-6 = 1.5rem;
$translate-8 = 2rem;
$translate-10 = 2.5rem;
$translate-12 = 3rem;
$translate-16 = 4rem;
$translate-20 = 5rem;
$translate-24 = 6rem;
$translate-32 = 8rem;
$translate-40 = 10rem;
$translate-48 = 12rem;
$translate-56 = 14rem;
$translate-64 = 16rem;
$translate-96 = 24rem;
$translate-128 = 32rem;
$translate-px = 1px;
$translate--1 = -0.25rem;
$translate--2 = -0.5rem;
$translate--3 = -0.75rem;
$translate--4 = -1rem;
$translate--5 = -1.25rem;
$translate--6 = -1.5rem;
$translate--8 = -2rem;
$translate--10 = -2.5rem;
$translate--12 = -3rem;
$translate--16 = -4rem;
$translate--20 = -5rem;
$translate--24 = -6rem;
$translate--32 = -8rem;
$translate--40 = -10rem;
$translate--48 = -12rem;
$translate--56 = -14rem;
$translate--64 = -16rem;
$translate--96 = -24rem;
$translate--128 = -32rem;
$translate--px = -1px;
$translate--full = -100%;
$translate--1\\\\/2 = -50%;
$translate-1\\\\/2 = 50%;
$translate-full = 100%;

$skew-0 = 0;
$skew-3 = 3deg;
$skew-6 = 6deg;
$skew-12 = 12deg;
$skew--12 = -12deg;
$skew--6 = -6deg;
$skew--3 = -3deg;

$transitionProperty-none = none;
$transitionProperty-all = all;
$transitionProperty-default = (background-color, border-color, color, fill, stroke, opacity, box-shadow, transform);
$transitionProperty-colors = (background-color, border-color, color, fill, stroke);
$transitionProperty-opacity = opacity;
$transitionProperty-shadow = box-shadow;
$transitionProperty-transform = transform;

$transitionTimingFunction-linear = linear;
$transitionTimingFunction-in = (cubic-bezier(0.4, 0, 1, 1));
$transitionTimingFunction-out = (cubic-bezier(0, 0, 0.2, 1));
$transitionTimingFunction-in-out = (cubic-bezier(0.4, 0, 0.2, 1));

$transitionDuration-75 = 75ms;
$transitionDuration-100 = 100ms;
$transitionDuration-150 = 150ms;
$transitionDuration-200 = 200ms;
$transitionDuration-300 = 300ms;
$transitionDuration-500 = 500ms;
$transitionDuration-700 = 700ms;
$transitionDuration-1000 = 1000ms;

$transitionDelay-75 = 75ms;
$transitionDelay-100 = 100ms;
$transitionDelay-150 = 150ms;
$transitionDelay-200 = 200ms;
$transitionDelay-300 = 300ms;
$transitionDelay-500 = 500ms;
$transitionDelay-700 = 700ms;
$transitionDelay-1000 = 1000ms;

$animation-none = none;
$animation-spin = spin 1s linear infinite;
$animation-ping = (ping 1s cubic-bezier(0, 0, 0.2, 1) infinite);
$animation-pulse = (pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite);
$animation-bounce = bounce 1s infinite;

$keyframes-spin-to-transform = rotate(360deg);
$keyframes-ping-75-100-transform = scale(2);
$keyframes-ping-75-100-opacity = 0;
$keyframes-pulse-50-opacity = .5;
$keyframes-bounce-0-100-transform = translateY(-25%);
$keyframes-bounce-0-100-animationTimingFunction = (cubic-bezier(0.8,0,1,1));
$keyframes-bounce-50-transform = none;
$keyframes-bounce-50-animationTimingFunction = (cubic-bezier(0,0,0.2,1));
"
`;
